# data.tom.camp

./: .env.example  .gitignore  .semgrep.yml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  MIGRATION.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  migrate.py  pyproject.toml  pytest.ini  semgrep.yml
alembic/: env.py
alembic/versions/: f222bd2af0da_initial_schema.py
app/: exceptions.py  main.py
app/api/v1/: api_key_routes.py  data_routes.py  device_router.py  device_routes.py
app/models/: api_key.py  base.py  device.py
app/schemas/: api_key_schema.py  data_schema.py  device_schema.py
app/services/: api_key_service.py  data_service.py  device_service.py
app/utils/: auth.py  config.py  database.py  logger.py  middleware.py
scripts/: backup.env.example  backup.sh
tests/: conftest.py  test_main.py
tests/api/v1/: test_api_key.py  test_data.py  test_device.py
tests/unit/: test_auth.py
